# outlook-addin-email-backend

./: email_cleaner.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_outlook-addin-backend.yml
ai/: __init__.py  ai_client.py  analyze.py  classify.py  response.py
