[project]
name = "outlook-addin-email-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.6",
    "fastapi-middleware>=0.2.1",
    "langchain>=1.2.9",
    "openai>=2.18.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "unicorn>=2.1.4",
    "uvicorn>=0.40.0",
]
