[project]
name = "outlook-addin-email-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastapi-middleware>=0.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]
